--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p  class="white" style="margin-bottom: 2em">2024.08.10</p>
     <p  class="white" style="margin-bottom: 2em">Queens' College, Cambridge</p>
     <p class="lead">
-        <a href="./Schedule.html" class="btn btn-outline-light">Find out more</a>
+        <a href="./schedule.html" class="btn btn-outline-light">Find out more</a>
     </p>
 </div>
 
