--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="./Index.html">A&M</a>
+            <a class="navbar-brand" href="./index.html">A&M</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -28,13 +28,13 @@
                         <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Schedule.html">Schedule</a>
+                        <a class="nav-link" href="./Sshedule.html">Schedule</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="./menu.html">Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./Guest Info.html">Guest Info</a>
+                        <a class="nav-link" aria-current="page" href="./guest info.html">Guest Info</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Contact</a>
