--- a/guest info.html
+++ b/guest info.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Schedule.html">Schedule</a>
+                        <a class="nav-link" href="./schedule.html">Schedule</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="./menu.html">Menu</a>
