--- a/menu.html
+++ b/menu.html
@@ -28,16 +28,16 @@
                         <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Schedule.html">Schedule</a>
+                        <a class="nav-link" href="./schedule.html">Schedule</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./Guest Info.html">Guest Info</a>
+                        <a class="nav-link" aria-current="page" href="./guest info.html">Guest Info</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./Contact.html">Contact</a>
+                        <a class="nav-link" aria-current="page" href="./contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
