--- a/guestinfo.html
+++ b/guestinfo.html
@@ -123,7 +123,7 @@
 
 
 <div class="footer">
-    <p class="brown" style="font-size:smaller;">Designed and credated by Angela Wang</p>
+    <p class="brown" style="font-size:smaller;">Designed and created by Angela Wang</p>
 </div>
     
 
