--- a/schedule.html
+++ b/schedule.html
@@ -81,7 +81,7 @@
                         <img src="./images/champagne.svg" alt="champagne icon" class="svg-images">
                         <span class="handwriting brown">15:30 - Cocktail Reception</span>
                     </h3>
-                    <p>Join us for a cocktail reception with canapés in the Old Court. This will be an opportunity for guests to take official photographs with the couple.</p>
+                    <p>Join us for a cocktail reception with canapés in the Old Court. This will be an opportunity for guests to take official photographs with the couple. Tips for the ladies: We suggest opting for wedges or block heels instead of stilettos, as our cocktail reception will be on grass. We wouldn’t want anyone’s stylish shoes getting stuck and destroyed!</p>
                 </div>            
             </div>   
             <div class="event">
