--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Sshedule.html">Schedule</a>
+                        <a class="nav-link" href="./schedule.html">Schedule</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="./menu.html">Menu</a>
@@ -66,7 +66,7 @@
             <p>Wechat / WhatsApp / Mobile: +44 7445 096012</p>
         </div> -->
 
-        <p class="handwriting brown">We plan to set up a WhatsApp group and a wechat group. Please come back to this page for QR code prior to the wedding date.</p>
+        <h1 class="handwriting brown">We plan to set up a WhatsApp group and a wechat group. Please come back to this page for QR code prior to the wedding date.</h1>
 
     </div>
 
