--- a/schedule.html
+++ b/schedule.html
@@ -53,8 +53,8 @@
 
 <div class="schedule-container-main">
     <div class="main-container">
-        <div id="schedule-title">
-            <h1 class="handwriting brown">Schedule of the Day</h1>
+        <div>
+            <h1 class="handwriting brown" style="font-size: 3em; padding-top: 2em">Schedule of the Day</h1>
         </div>
         <div class="schedule-container">
             <div class="event">
