--- a/schedule.html
+++ b/schedule.html
@@ -53,7 +53,7 @@
 
 <div class="schedule-container-main">
     <div class="main-container">
-        <div>
+        <div class="schedule-title">
             <h1 class="handwriting brown" style="font-size: 3em; padding-top: 2em">Schedule of the Day</h1>
         </div>
         <div class="schedule-container">
