--- a/menu.html
+++ b/menu.html
@@ -60,31 +60,31 @@
         </div>
         <div class="menu-container">
             <div class="menu-container-small">
-                <p class="handwriting brown" style="margin-top: 2em; margin-bottom: 1em;">Standard Menu</p>
+                <p class="handwriting brown" style="margin-top: 2em; margin-bottom: 1em; font-size:2em;">Standard Menu</p>
                 <div class="menu">
                     <p class="handwriting">Starter</p>
                     <p>xxx</p>
-                    <p class="handwriting" style="font-size: smaller;">pair with xxx</p>
+                    <p class="handwriting">pair with xxx</p>
                     <p class="handwriting">Main</p>
                     <p>xxx</p>
-                    <p class="handwriting" style="font-size: smaller;">pair with xxx</p>
+                    <p class="handwriting">pair with xxx</p>
                     <p class="handwriting">Dessert</p>
                     <p>xxx</p>
-                    <p class="handwriting" style="font-size: smaller;">pair with xxx</p>
+                    <p class="handwriting">pair with xxx</p>
                 </div>
             </div>
             <div class="menu-container-small">
-                <p class="handwriting brown"  style="margin-top: 2em; margin-bottom: 1em;">Vegetarian Menu</p>
+                <p class="handwriting brown"  style="margin-top: 2em; margin-bottom: 1em; font-size:2em;">Vegetarian Menu</p>
                 <div class="menu">
                     <p class="handwriting">Starter</p>
                     <p>xxx</p>
-                    <p class="handwriting" style="font-size: smaller;">pair with xxx</p>
+                    <p class="handwriting">pair with xxx</p>
                     <p class="handwriting">Main</p>
                     <p>xxx</p>
-                    <p class="handwriting" style="font-size: smaller;">pair with xxx</p>
+                    <p class="handwriting">pair with xxx</p>
                     <p class="handwriting">Dessert</p>
                     <p>xxx</p>
-                    <p class="handwriting" style="font-size: smaller;">pair with xxx</p>
+                    <p class="handwriting">pair with xxx</p>
                 </div>
             </div>
         </div>
