--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             <p>Wechat / WhatsApp / Mobile: +44 7445 096012</p>
         </div> -->
 
-        <h1 class="handwriting brown">We plan to set up a WhatsApp group and a wechat group. Please come back to this page for QR code prior to the wedding date.</h1>
+        <p>We plan to set up a WhatsApp group and a wechat group. Please come back to this page for QR code prior to the wedding date.</p>
 
     </div>
 
