--- a/schedule.html
+++ b/schedule.html
@@ -81,7 +81,7 @@
                         <img src="./images/champagne.svg" alt="champagne icon" class="svg-images">
                         <span class="handwriting brown">15:30 - Cocktail Reception</span>
                     </h2>
-                    <p>Join us for a cocktail reception with canapés in the Old Court. This will be an opportunity for guests to take official photographs with the couple. Tips for the ladies: We suggest opting for wedges or block heels instead of stilettos, as our cocktail reception will be on grass. We wouldn’t want anyone’s stylish shoes getting stuck and destroyed!</p>
+                    <p>Join us for a cocktail reception with canapés in the Old Court. This will be an opportunity for guests to take official photographs with the couple.</p>
                 </div>            
             </div>   
             <div class="event">
@@ -104,9 +104,12 @@
             </div>
         </div>
     </div>
-
-
 </div>
+<div class="dresscode-container" >
+    <p>* The dress code for our wedding is semi-formal/cocktail attire. Think cocktail dresses or a suit and tie or a sports coat. Tips for the ladies: We suggest opting for wedges or block heels instead of stilettos, as our cocktail reception will be on grass. We wouldn’t want anyone’s stylish shoes getting stuck and destroyed!</p>
+    <p>** We have included a map of the College for your reference the guide you through the day's festivities. </p>
+    <img src="./images/queens map.jpg" alt="map of Queens' College" id="queensmap">
+</div> 
 
 
 
