--- a/menu.html
+++ b/menu.html
@@ -53,14 +53,14 @@
 
 <div>
 
-    <div class="menu-container-main">
+    <div class="menu-container-main" style="margin-bottom: 0;">
         <div>
             <p>We are delighted to offer a three-course menu for our wedding dinner, complemented with a vegetarian option. Please let us know your preferred choice. </p>
             <p>If you have any allergies or specific dietary requirements, please inform the couple in advance.</p>            
         </div>
         <div class="menu-container">
-            <div class="menu-container-small">
-                <p class="handwriting brown" style="margin-top: 2em; margin-bottom: 1em; font-size:2em;">Standard Menu</p>
+            <div class="menu-container-small" style="margin-bottom: 2em;">
+                <p class="handwriting brown" style="margin-top:1em; margin-bottom: 1em; font-size:2em;">Standard Menu</p>
                 <div class="menu">
                     <p class="handwriting">Starter</p>
                     <p>xxx</p>
@@ -73,8 +73,8 @@
                     <p class="handwriting">pair with xxx</p>
                 </div>
             </div>
-            <div class="menu-container-small">
-                <p class="handwriting brown"  style="margin-top: 2em; margin-bottom: 1em; font-size:2em;">Vegetarian Menu</p>
+            <div class="menu-container-small" style="margin-bottom: 2em;">
+                <p class="handwriting brown"  style="margin-top: 1em; margin-bottom: 1em; font-size:2em;">Vegetarian Menu</p>
                 <div class="menu">
                     <p class="handwriting">Starter</p>
                     <p>xxx</p>
