--- a/index.html
+++ b/index.html
@@ -6,37 +6,44 @@
     <title>A&M Wedding</title>
     <link rel="stylesheet" href="./style.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Liu+Jian+Mao+Cao&family=Ma+Shan+Zheng&family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
+
 </head>
 
 <body class="landing-page">
 
 <header>
-
+    <div style="display: none;">
+        <select id="languageDropdown" >
+            <option value="en">🇬🇧 English</option>
+            <option value="zh">🇨🇳 中文</option>
+            <option value="pt">🇧🇷 Português</option>
+        </select>
+    </div>
 </header>
 
 <div class="white-text">
     <div class="couple-name">
-        <div>
-            <h1 class="handwriting white" style="font-size: 4em;">Angela</h1>
-        </div>
-        <div>
-            <p class="white" style="margin-top: 1em">and</p>
-        </div>  
-        <div>  
-            <h1 class="handwriting white" style="font-size: 4em;">Marcos</h1>
-        </div>
+            <h1 class="handwriting white" style="font-size: 5em;" id="landingPageText1">Angela</h1>
+            <p class="white" style="margin-top: 1em" id="landingPageText2">and</p>
+            <h1 class="handwriting white" style="font-size: 5em;" id="landingPageText3">Marcos</h1>
     </div>
-    <p  class="white" style="margin-bottom: 2em">2024.08.10</p>
-    <p  class="white" style="margin-bottom: 2em">Queens' College, Cambridge</p>
+    <p  class="white" style="margin-bottom: 2em" id="landingPageText4">2024.08.10</p>
+    <p  class="white" style="margin-bottom: 2em" id="landingPageText5">Queens' College, Cambridge</p>
     <p class="lead">
-        <a href="./schedule.html" class="btn btn-outline-light">Find out more</a>
+        <a href="./schedule.html" class="btn btn-outline-light" id="landingPageText6">Find out more</a>
     </p>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script type="module" src="./index.js"></script>
 
 </body>
 </html>
