--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,11 @@
             <a href="index.html" class="navbar-logo">
                 <img src="./images/A&M.png">
             </a>
-            <a href="./index.html" class="nav-item">Home</a>
-            <a href="./schedule.html" class="nav-item">Schedule</a>
-            <a href="./menu.html" class="nav-item">Menu</a>
-            <a href="./guestinfo.html" class="nav-item">Guest Info</a>
-            <a href="#" class="nav-item  current-page">Contact</a>
+            <a href="./index.html" class="nav-item" id="navText1">Home</a>
+            <a href="./schedule.html" class="nav-item" id="navText2">Schedule</a>
+            <a href="./menu.html" class="nav-item" id="navText3">Menu</a>
+            <a href="./guestinfo.html" class="nav-item" id="navText4">Guest Info</a>
+            <a href="#" class="nav-item  current-page" id="navText5">Contact</a>
             <select class="nav-item" id="languageDropdown" >
                 <option value="en">🇬🇧 English</option>
                 <option value="zh">🇨🇳 中文</option>
