--- a/schedule.html
+++ b/schedule.html
@@ -25,11 +25,11 @@
             <a href="index.html" class="navbar-logo">
                 <img src="./images/A&M.png">
             </a>
-            <a href="./index.html" class="nav-item">Home</a>
-            <a href="#" class="nav-item current-page">Schedule</a>
-            <a href="./menu.html" class="nav-item">Menu</a>
-            <a href="./guestinfo.html" class="nav-item">Guest Info</a>
-            <a href="./contact.html" class="nav-item">Contact</a>
+            <a href="./index.html" class="nav-item" id="navText1">Home</a>
+            <a href="#" class="nav-item current-page" id="navText2">Schedule</a>
+            <a href="./menu.html" class="nav-item" id="navText3">Menu</a>
+            <a href="./guestinfo.html" class="nav-item" id="navText4">Guest Info</a>
+            <a href="./contact.html" class="nav-item" id="navText5">Contact</a>
             <select class="nav-item" id="languageDropdown" >
                 <option value="en">🇬🇧 English</option>
                 <option value="zh">🇨🇳 中文</option>
@@ -48,7 +48,7 @@
 <div class="schedule-container-main">
     <div class="main-container">
         <div class="schedule-title">
-            <h1 class="handwriting brown" style="font-size: 3em; margin: 1em;" id="schedulePageText1">Schedule of the Day</h1>
+            <h1 class="handwriting brown" style="font-size: 2em; margin: 1em;" id="schedulePageText1">Schedule of the Day</h1>
         </div>
         <div class="schedule-container">
             <div class="event">
