--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p  class="white" style="margin-bottom: 2em" id="landingPageText4">2024.08.10</p>
     <p  class="white" style="margin-bottom: 2em" id="landingPageText5">Queens' College, Cambridge</p>
     <p class="lead">
-        <a href="./schedule.html" class="btn btn-outline-light" id="landingPageText6">Find out more</a>
+        <a href="./schedule.html" class="btn btn-outline-light" id="landingPageText6" style="text-decoration: underline;">Find out more</a>
     </p>
 </div>
 
