--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
     
 </header>
 
-<div>
+<div id="main-body">
 
     <div class="contact-container">
         <!-- <div>
@@ -64,15 +64,11 @@
 
     </div>
 
+    <div class="footer">
+        <p class="brown" style="font-size:smaller;" id="footerText1">with 💗 from London</p>
+    </div>
+
 </div>
-
-
-
-
-<div class="footer">
-    <p class="brown" style="font-size:smaller;" id="footerText1">with 💗 from London</p>
-</div>
-    
 
 
 <script type="module" src="./index.js"></script>
