--- a/schedule.html
+++ b/schedule.html
@@ -17,101 +17,102 @@
 </head>
 
 <body class="webpages">
-   
-<header>
-
-    <nav class="navbar">
-        <div class="navbar1">
-            <a href="index.html" class="navbar-logo">
-                <img src="./images/A&M.png">
-            </a>
-            <a href="./index.html" class="nav-item" id="navText1">Home</a>
-            <a href="#" class="nav-item current-page" id="navText2">Schedule</a>
-            <a href="./menu.html" class="nav-item" id="navText3">Menu</a>
-            <a href="./guestinfo.html" class="nav-item" id="navText4">Guest Info</a>
-            <a href="./contact.html" class="nav-item" id="navText5">Contact</a>
-            <select class="nav-item" id="languageDropdown" >
-                <option value="en">🇬🇧 English</option>
-                <option value="zh">🇨🇳 中文</option>
-                <option value="pt">🇧🇷 Português </option>
-            </select>
-        </div>
-        <div class="navbar2">
-            <button class="nav-toggle" aria-label="toggle navigation">
-                <span class="hamburger"></span>
-            </button>
-        </div>
-    </nav>
     
-</header>
+    <header>
+        <nav class="navbar">
+            <div class="navbar1">
+                <a href="index.html" class="navbar-logo">
+                    <img src="./images/A&M.png">
+                </a>
+                <a href="./index.html" class="nav-item" id="navText1">Home</a>
+                <a href="#" class="nav-item current-page" id="navText2">Schedule</a>
+                <a href="./menu.html" class="nav-item" id="navText3">Menu</a>
+                <a href="./guestinfo.html" class="nav-item" id="navText4">Guest Info</a>
+                <a href="./contact.html" class="nav-item" id="navText5">Contact</a>
+                <select class="nav-item" id="languageDropdown" >
+                    <option value="en">🇬🇧 English</option>
+                    <option value="zh">🇨🇳 中文</option>
+                    <option value="pt">🇧🇷 Português </option>
+                </select>
+            </div>
+            <div class="navbar2">
+                <button class="nav-toggle" aria-label="toggle navigation">
+                    <span class="hamburger"></span>
+                </button>
+            </div>
+        </nav>        
+    </header>
 
-<div class="schedule-container-main">
-    <div class="main-container">
-        <div class="schedule-title">
-            <h1 class="handwriting brown" style="font-size: 2em; margin: 1em;" id="schedulePageText1">Schedule of the Day</h1>
+    <div class="main-body">
+        <div class="schedule-container-main">
+            <div class="main-container">
+                <div class="schedule-title">
+                    <h1 class="handwriting brown" style="font-size: 2em; margin: 1em;" id="schedulePageText1">Schedule of the Day</h1>
+                </div>
+                <div class="schedule-container">
+                    <div class="event">
+                        <div>
+                            <h2>                    
+                                <img src="./images/people.svg" alt="people icon" class="svg-images">
+                                <span class="handwriting brown" id="schedulePageText2">13:30 - Welcome</span>
+                            </h2>
+                            <p id="schedulePageText3">Guests are invited to gather at Walnut Tree Court prior to the ceremony. Please enter the college through the Porter’s Lodge on Silver Street, where directions will be provided.</p>
+                        </div>
+                    </div>   
+                    <div class="event"> 
+                        <div>
+                            <h2>
+                                <img src="./images/church.svg" alt="church icon" class="svg-images">
+                                <span class="handwriting brown" id="schedulePageText4">14:30 - Ceremony</span>
+                            </h2>
+                            <p id="schedulePageText5">The wedding ceremony will take place in the chapel. Confetti will be provided for a celebratory moment on the Mathematical Bridge following the ceremony.</p>
+                        </div>
+                    </div>
+                    <div class="event">
+                        <div>
+                            <h2>
+                                <img src="./images/champagne.svg" alt="champagne icon" class="svg-images">
+                                <span class="handwriting brown" id="schedulePageText6">15:30 - Cocktail Reception</span>
+                            </h2>
+                            <p id="schedulePageText7">Join us for a cocktail reception with canapés in the Old Court. This will be an opportunity for guests to take official photographs with the couple.</p>
+                        </div>            
+                    </div>   
+                    <div class="event">
+                        <div>
+                            <h2>
+                                <img src="./images/dinner.svg" alt="dinner icon" class="svg-images">
+                                <span class="handwriting brown" id="schedulePageText8">17:30 - Dinner</span>
+                            </h2>
+                            <p>
+                                <span id="schedulePageText9-1">A three-course dinner will be served in the Old Hall. Details of the menu can be found on the </span>
+                                <a href="./menu.html" id="schedulePageText9-2">Menu</a>
+                                <span id="schedulePageText9-3"> page.</span>
+                            </p>
+                        </div>            
+                    </div>
+                    <div class="event">
+                        <div>
+                            <h2>
+                                <img src="./images/dance.svg" alt="dance icon" class="svg-images">
+                                <span class="handwriting brown" id="schedulePageText10">20:00 - Evening Reception</span>
+                            </h2>
+                            <p id="schedulePageText11">The celebration continues with our evening reception. Get ready to enjoy the music as a Jazz band awaits you in the Old Kitchen.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="schedule-container">
-            <div class="event">
-                <div>
-                    <h2>                    
-                        <img src="./images/people.svg" alt="people icon" class="svg-images">
-                        <span class="handwriting brown" id="schedulePageText2">13:30 - Welcome</span>
-                    </h2>
-                    <p id="schedulePageText3">Guests are invited to gather at Walnut Tree Court prior to the ceremony. Please enter the college through the Porter’s Lodge on Silver Street, where directions will be provided.</p>
-                </div>
-            </div>   
-            <div class="event"> 
-                <div>
-                    <h2>
-                        <img src="./images/church.svg" alt="church icon" class="svg-images">
-                        <span class="handwriting brown" id="schedulePageText4">14:30 - Ceremony</span>
-                    </h2>
-                    <p id="schedulePageText5">The wedding ceremony will take place in the chapel. Confetti will be provided for a celebratory moment on the Mathematical Bridge following the ceremony.</p>
-                </div>
-            </div>
-            <div class="event">
-                <div>
-                    <h2>
-                        <img src="./images/champagne.svg" alt="champagne icon" class="svg-images">
-                        <span class="handwriting brown" id="schedulePageText6">15:30 - Cocktail Reception</span>
-                    </h2>
-                    <p id="schedulePageText7">Join us for a cocktail reception with canapés in the Old Court. This will be an opportunity for guests to take official photographs with the couple.</p>
-                </div>            
-            </div>   
-            <div class="event">
-                <div>
-                    <h2>
-                        <img src="./images/dinner.svg" alt="dinner icon" class="svg-images">
-                        <span class="handwriting brown" id="schedulePageText8">17:30 - Dinner</span>
-                    </h2>
-                    <p id="schedulePageText9">A three-course dinner will be served in the Old Hall. Details of the menu can be found on the Menu page.</p>
-                </div>            
-            </div>
-            <div class="event">
-                <div>
-                    <h2>
-                        <img src="./images/dance.svg" alt="dance icon" class="svg-images">
-                        <span class="handwriting brown" id="schedulePageText10">20:00 - Evening Reception</span>
-                    </h2>
-                    <p id="schedulePageText11">The celebration continues with our evening reception. Get ready to enjoy the music as a Jazz band awaits you in the Old Kitchen.</p>
-                </div>
-            </div>
+
+        <div class="dresscode-container" >
+            <p id="schedulePageText12">* The dress code for our wedding is semi-formal/cocktail attire. Think cocktail dresses or a suit and tie or a sports coat. Tips for the ladies: We suggest opting for wedges or block heels instead of stilettos, as our cocktail reception will be on grass. We wouldn’t want anyone’s stylish shoes getting stuck and destroyed!</p>
+            <p id="schedulePageText13">** We have included a map of the College for your reference the guide you through the day's festivities. </p>
+            <img src="./images/queens map.jpg" class="thumbnail" data-fullsize-url="./images/queens map.jpg" alt="map of Queens' College" id="queensmap">
+        </div> 
+
+        <div class="footer">
+            <p class="brown" style="font-size:smaller;" id="footerText1">with 💗 from London</p>
         </div>
     </div>
-</div>
-<div class="dresscode-container" >
-    <p id="schedulePageText12">* The dress code for our wedding is semi-formal/cocktail attire. Think cocktail dresses or a suit and tie or a sports coat. Tips for the ladies: We suggest opting for wedges or block heels instead of stilettos, as our cocktail reception will be on grass. We wouldn’t want anyone’s stylish shoes getting stuck and destroyed!</p>
-    <p id="schedulePageText13">** We have included a map of the College for your reference the guide you through the day's festivities. </p>
-    <img src="./images/queens map.jpg" alt="map of Queens' College" id="queensmap">
-</div> 
-
-
-
-
-<div class="footer">
-    <p class="brown" style="font-size:smaller;" id="footerText1">with 💗 from London</p>
-</div>
-    
 
 <script type="module" src="./index.js"></script>
 
