--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 <div class="white-text">
     <div class="couple-name">
-            <h1 class="handwriting white" style="font-size: 5em;" id="landingPageText1">Angela</h1>
+            <h1 class="handwriting-eng white" style="font-size: 5em;" id="landingPageText1">Angela</h1>
             <p class="white" style="margin-top: 1em" id="landingPageText2">and</p>
-            <h1 class="handwriting white" style="font-size: 5em;" id="landingPageText3">Marcos</h1>
+            <h1 class="handwriting-eng white" style="font-size: 5em;" id="landingPageText3">Marcos</h1>
     </div>
     <p  class="white" style="margin-bottom: 2em" id="landingPageText4">2024.08.10</p>
     <p  class="white" style="margin-bottom: 2em" id="landingPageText5">Queens' College, Cambridge</p>
@@ -44,6 +44,8 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script type="module" src="./index.js"></script>
+
+
 
 </body>
 </html>
