--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <a href="./index.html" class="nav-item" id="navText1">Home</a>
             <a href="./schedule.html" class="nav-item" id="navText2">Schedule</a>
             <a href="./menu.html" class="nav-item" id="navText3">Menu</a>
-            <a href="./guestinfo.html" class="nav-item" id="navText4">Guest Info</a>
+            <a href="./guestinfo.html" class="nav-item" id="navText4">Travel Guide</a>
             <a href="#" class="nav-item  current-page" id="navText5">Contact</a>
             <select class="nav-item" id="languageDropdown" >
                 <option value="en">🇬🇧 English</option>
@@ -37,9 +37,14 @@
             </select>
         </div>
         <div class="navbar2">
-            <button class="nav-toggle" aria-label="toggle navigation">
-                <span class="hamburger"></span>
-            </button>
+            <p class="brown"> ~ ♡ 囍 ♡ ~ </p>
+        </div>
+        <div class="navbar3">
+            <div>
+                <button class="nav-toggle" aria-label="toggle navigation">
+                    <span class="hamburger"></span>
+                </button>
+            </div>
         </div>
     </nav>
     
@@ -48,24 +53,30 @@
 <div id="main-body">
 
     <div class="contact-container">
-        <!-- <div>
-            <img src="./images/bride.jpg" alt="bride image">
-            <h1 class="handwriting brown" style="font-size: 3rem; margin-bottom: 1em;">Angela</h1>
-            <p>Mobile: +44 7460 698895</p>
-            <p>Wechat / WhatsApp: +86 185 0218 7478</p>
+        <div class="venue-container">
+            <div class="venue-info">
+                <h2 class="handwriting" id="contactPageText1">Venue Address:</h2>
+                <p>Queens College</p>
+                <p>Silver St</p>
+                <p>CB3 9ET</p>
+                <p>Cambridge</p> 
+            </div>
+            <div class="venue-info">
+                <h2 class="handwriting" id="contactPageText2">Venue Contact:</h2>
+                <div>
+                    <p>+44 (0) 1223 335511</p>
+                    <p id="contactPageText2-1">(Porter's Lodge)</p>
+                </div>
+            </div>
         </div>
-        <div>
-            <img src="./images/groom.jpg" alt="groom image">
-            <h1 class="handwriting brown" style="font-size: 3rem; margin-bottom: 1em;">Marcos</h1>
-            <p>Wechat / WhatsApp / Mobile: +44 7445 096012</p>
-        </div> -->
-
-        <p>We plan to set up a WhatsApp group and a wechat group. Please come back to this page for QR code prior to the wedding date.</p>
-
+        <div class="social-container">
+            <h2 class="handwriting" id="contactPageText3">Social Media:</h2>
+            <p id="contactPageText3-1">We plan to set up a WhatsApp group and a wechat group. Please come back to this page for QR code prior to the wedding date.</p>
+        </div>
     </div>
 
     <div class="footer">
-        <p class="brown" style="font-size:smaller;" id="footerText1">with 💗 from London</p>
+        <p class="brown" style="font-size:smaller;" id="footerText1">with ♡ from London</p>
     </div>
 
 </div>
