--- a/schedule.html
+++ b/schedule.html
@@ -27,7 +27,7 @@
                 <a href="./index.html" class="nav-item" id="navText1">Home</a>
                 <a href="#" class="nav-item current-page" id="navText2">Schedule</a>
                 <a href="./menu.html" class="nav-item" id="navText3">Menu</a>
-                <a href="./guestinfo.html" class="nav-item" id="navText4">Guest Info</a>
+                <a href="./guestinfo.html" class="nav-item" id="navText4">Travel Guide</a>
                 <a href="./contact.html" class="nav-item" id="navText5">Contact</a>
                 <select class="nav-item" id="languageDropdown" >
                     <option value="en">🇬🇧 English</option>
@@ -36,9 +36,14 @@
                 </select>
             </div>
             <div class="navbar2">
-                <button class="nav-toggle" aria-label="toggle navigation">
-                    <span class="hamburger"></span>
-                </button>
+                <p class="brown"> ~ ♡ 囍 ♡ ~ </p>
+            </div>
+            <div class="navbar3">
+                <div>
+                    <button class="nav-toggle" aria-label="toggle navigation">
+                        <span class="hamburger"></span>
+                    </button>
+                </div>
             </div>
         </nav>        
     </header>
@@ -51,38 +56,54 @@
                 </div>
                 <div class="schedule-container">
                     <div class="event">
-                        <div>
-                            <h2>                    
-                                <img src="./images/people.svg" alt="people icon" class="svg-images">
-                                <span class="handwriting brown" id="schedulePageText2">13:30 - Welcome</span>
-                            </h2>
-                            <p id="schedulePageText3">Guests are invited to gather at Walnut Tree Court prior to the ceremony. Please enter the college through the Porter’s Lodge on Silver Street, where directions will be provided.</p>
+                        <div class="event-container">
+                            <div class="event-title">
+                                <div>                    
+                                    <img src="./images/people.svg" alt="people icon" class="svg-images">
+                                </div>
+                                <div>
+                                    <h2 class="handwriting brown" id="schedulePageText2-1">13:30 </h2>
+                                    <h2 class="handwriting brown" id="schedulePageText2-2">- Welcome</h2>
+                                </div>
+                            </div>
+                            <p id="schedulePageText3">Guests are invited to gather at the Walnut Tree Court prior to the ceremony. Please enter the college through the Porter’s Lodge on Silver Street, where directions will be provided.</p>
                         </div>
                     </div>   
                     <div class="event"> 
-                        <div>
-                            <h2>
+                        <div class="event-container">
+                            <div class="event-title">
                                 <img src="./images/church.svg" alt="church icon" class="svg-images">
-                                <span class="handwriting brown" id="schedulePageText4">14:30 - Ceremony</span>
-                            </h2>
-                            <p id="schedulePageText5">The wedding ceremony will take place in the chapel. Confetti will be provided for a celebratory moment on the Mathematical Bridge following the ceremony.</p>
+                                <div>
+                                    <h2 class="handwriting brown" id="schedulePageText4-1">14:30 </h2>
+                                    <h2 class="handwriting brown" id="schedulePageText4-2">- Ceremony</h2>
+                                </div>
+                            </div>
+                            <p id="schedulePageText5">The wedding ceremony will take place in the chapel. Confetti will be provided for a celebratory moment following the ceremony.</p>
                         </div>
                     </div>
                     <div class="event">
-                        <div>
-                            <h2>
+                        <div class="event-container">
+                            <div class="event-title">
                                 <img src="./images/champagne.svg" alt="champagne icon" class="svg-images">
-                                <span class="handwriting brown" id="schedulePageText6">15:30 - Cocktail Reception</span>
-                            </h2>
-                            <p id="schedulePageText7">Join us for a cocktail reception with canapés in the Old Court. This will be an opportunity for guests to take official photographs with the couple.</p>
+                                <div>
+                                    <h2 class="handwriting brown" id="schedulePageText6-1">15:30 </h2>
+                                    <h2 class="handwriting brown" id="schedulePageText6-2">- Cocktail Reception</h2>
+                                </div>
+                            </div>
+                            <p id="schedulePageText7">Join us for a cocktail reception with canapés in the Old Court. This will be an opportunity for guests to take photographs with the couple.</p>
                         </div>            
                     </div>   
                     <div class="event">
-                        <div>
-                            <h2>
-                                <img src="./images/dinner.svg" alt="dinner icon" class="svg-images">
-                                <span class="handwriting brown" id="schedulePageText8">17:30 - Dinner</span>
-                            </h2>
+                        <div class="event-container">
+                            <div class="event-title">
+                                <div>
+                                    <img src="./images/dinner.svg" alt="dinner icon" class="svg-images">
+                                </div>
+                                <div>
+                                    <h2 class="handwriting brown" id="schedulePageText8-1">17:30 </h2>
+                                    <h2 class="handwriting brown" id="schedulePageText8-2">- Dinner</h2>
+                                </div>
+                            </div>
                             <p>
                                 <span id="schedulePageText9-1">A three-course dinner will be served in the Old Hall. Details of the menu can be found on the </span>
                                 <a href="./menu.html" id="schedulePageText9-2">Menu</a>
@@ -91,11 +112,16 @@
                         </div>            
                     </div>
                     <div class="event">
-                        <div>
-                            <h2>
-                                <img src="./images/dance.svg" alt="dance icon" class="svg-images">
-                                <span class="handwriting brown" id="schedulePageText10">20:00 - Evening Reception</span>
-                            </h2>
+                        <div class="event-container">
+                            <div class="event-title">
+                                <div>
+                                    <img src="./images/dance.svg" alt="dance icon" class="svg-images">
+                                </div>
+                                <div>
+                                    <h2 class="handwriting brown" id="schedulePageText10-1">20:00 </h2>
+                                    <h2 class="handwriting brown" id="schedulePageText10-2">- Evening Reception</h2>
+                                </div>
+                            </div>
                             <p id="schedulePageText11">The celebration continues with our evening reception. Get ready to enjoy the music as a Jazz band awaits you in the Old Kitchen.</p>
                         </div>
                     </div>
@@ -105,12 +131,12 @@
 
         <div class="dresscode-container" >
             <p id="schedulePageText12">* The dress code for our wedding is semi-formal/cocktail attire. Think cocktail dresses or a suit and tie or a sports coat. Tips for the ladies: We suggest opting for wedges or block heels instead of stilettos, as our cocktail reception will be on grass. We wouldn’t want anyone’s stylish shoes getting stuck and destroyed!</p>
-            <p id="schedulePageText13">** We have included a map of the College for your reference the guide you through the day's festivities. </p>
+            <p id="schedulePageText13">** Tips for the ladies: We suggest opting for wedges or block heels instead of stilettos, as our cocktail reception will be on grass. We wouldn’t want anyone’s stylish shoes getting stuck and destroyed!</p>
             <img src="./images/queens map.jpg" class="thumbnail" data-fullsize-url="./images/queens map.jpg" alt="map of Queens' College" id="queensmap">
         </div> 
 
         <div class="footer">
-            <p class="brown" style="font-size:smaller;" id="footerText1">with 💗 from London</p>
+            <p class="brown" style="font-size:smaller;" id="footerText1">with ♡ from London</p>
         </div>
     </div>
 
