--- a/guestinfo.html
+++ b/guestinfo.html
@@ -27,7 +27,7 @@
             <a href="./index.html" class="nav-item" id="navText1">Home</a>
             <a href="./schedule.html" class="nav-item" id="navText2">Schedule</a>
             <a href="./menu.html" class="nav-item" id="navText3">Menu</a>
-            <a href="#" class="nav-item current-page" id="navText4">Guest Info</a>
+            <a href="#" class="nav-item current-page" id="navText4">Travel Guide</a>
             <a href="./contact.html" class="nav-item" id="navText5">Contact</a>
             <select class="nav-item" id="languageDropdown" >
                 <option value="en">🇬🇧 English</option>
@@ -36,9 +36,14 @@
             </select>
         </div>
         <div class="navbar2">
-            <button class="nav-toggle" aria-label="toggle navigation">
-                <span class="hamburger"></span>
-            </button>
+            <p class="brown"> ~ ♡ 囍 ♡ ~ </p>
+        </div>
+        <div class="navbar3">
+            <div>
+                <button class="nav-toggle" aria-label="toggle navigation">
+                    <span class="hamburger"></span>
+                </button>
+            </div>
         </div>
     </nav>
 </header>
@@ -53,7 +58,7 @@
             </div>
             <div>
                 <h1 class="handwriting brown" id="infoPageText1">Queens' College</h1>
-                <p><span id="infoPageText1-1">For those unfamiliar with Cambridge's college system, colleges are smaller academic communities within the larger university, each with its own accommodation, dining halls, and social spaces. (Yes, the Harry Potter series drew inspiration from this system!) We've chosen Cambridge and Queens' College because it holds a special place in our hearts - it's where we studied and forged lifelong friendships. With almost 600 years of history, Queens' embodies the essence of Cambridge's academic excellence and tradition. If you'd like to learn more about Queens' College, please visit </span>
+                <p><span id="infoPageText1-1">For those unfamiliar with Cambridge's college system, colleges are smaller academic communities within the larger university, each with its own accommodation, dining halls, and social spaces. (Yes, the Harry Potter series drew inspiration from this system!) We've chosen Cambridge and Queens' College because it holds a special place in our hearts - it's where we met, and where we forged great friendships. With almost 600 years of history, Queens' embodies the essence of Cambridge's academic excellence and tradition. If you'd like to learn more about Queens' College, please visit </span>
                     <a href="https://www.queens.cam.ac.uk/" id="infoPageText1-2">Queens' College</a>
                     <span id="infoPageText1-3">.</span>
                 </p>
@@ -74,7 +79,7 @@
                     <a href="https://www.booking.com/hotel/gb/du-vin-bistro-cambridge.en-gb.html?aid=311076&label=du-vin-bistro-cambridge-0ZT7PhLnzRqIvYybUkMvVQS392956217007%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-2007851543976%3Akwd-10923672594%3Alp9045903%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YVujEjbMrKBVEQO8hCDrg-c&sid=a9d7321ae1d94c4c3ff8125cc8e3c2d5&dest_id=-2591658;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=1;hpos=1;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;srepoch=1710882782;srpvid=4dd9952b8170037d;type=total;ucfs=1&#hotelTmpl">Hotel du Vin</a>
                     <span id="infoPageText2-3">. For serviced apartments, </span>
                     <a href="https://www.booking.com/hotel/gb/turing-locke.en-gb.html?aid=311076&label=du-vin-bistro-cambridge-0ZT7PhLnzRqIvYybUkMvVQS392956217007%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-2007851543976%3Akwd-10923672594%3Alp9045903%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YVujEjbMrKBVEQO8hCDrg-c&sid=a9d7321ae1d94c4c3ff8125cc8e3c2d5&dest_id=-2591658;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=2;hpos=2;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;srepoch=1710882782;srpvid=4dd9952b8170037d;type=total;ucfs=1&#hotelTmpl">Turing Locke </a>
-                    <span id="infoPageText2-4">is a recommended option. Queens’ College also offers a limited number of single/twin ensuite rooms; please contact Angela if interested.</span>
+                    <span id="infoPageText2-4"> is a recommended option. Queens’ College also offers a limited number of single/twin ensuite rooms; please contact Angela if interested.</span>
                 </p>
             </div>
         </div>
@@ -85,8 +90,9 @@
             </div>
             <div>
                 <h1 class="handwriting brown" id="infoPageText3">Travel</h1>
-                <p><span id="infoPageText3-1">The most convenient way to travel from London to Cambridge is by train. Trains run regularly from King’s Cross, St Pancras, and Liverpool Street stations to Cambridge main station. We recommend booking your tickets via </span><a href="https://www.thetrainline.com">Trainline</a>
-                    <span id="infoPageText3-2">Within Cambridge, bus services are limited. Uber is an efficient option, or you might prefer </span>
+                <p><span id="infoPageText3-1">The most convenient way to travel from London to Cambridge is by train. Trains run regularly from King’s Cross, St Pancras, and Liverpool Street stations in London to Cambridge main station. We recommend booking your tickets via </span>
+                    <a href="https://www.thetrainline.com">Trainline</a>
+                    <span id="infoPageText3-2">. Within Cambridge, bus services are limited. Uber is an efficient option, or you might prefer </span>
                     <a href="https://www.panthertaxis.co.uk">Panther Taxi</a>
                     <span id="infoPageText3-3">, a local provider.</span></p>
             </div>
@@ -100,10 +106,10 @@
                 <h1 class="handwriting brown" id="infoPageText4">Things to Do</h1>
                 <p><span id="infoPageText4-1">Cambridge boasts 31 unique colleges. Apart from Queens’, we recommend King’s College, Trinity College, and St John’s College as the most popular ones if you intend to visit them. You may need to purchase tickets onsite at each college. If you have a moment on Friday evening you might want to see if there's an evensong happening at King's College. It's a lovely way to unwind and experience the peaceful ambiance. You may discover the city's cultural heritage at the </span>
                     <a href="https://fitzmuseum.cam.ac.uk/" id="infoPageText4-2">Fitzwilliam Museum</a>
-                    <span id="infoPageText4-3">, featuring art and antiquities. Punting is a popular Cambridge activity. There are various</span>
-                    <a href="https://www.tripadvisor.co.uk/Attraction_Products-g186225-zfg11865-a_contentId.38631605467+692981228-Cambridge_Cambridgeshire_England.html" id="infoPageText4-4"> punting providers</a>
-                    <span id="infoPageText4-5">, including one right in front of Queens’ College. For those interested in city history, we recommend </span>
-                    <a href="https://www.tripadvisor.co.uk/Attraction_Products-g186225-t12046-zfg11876-a_contentId.38383217257+692981228-Cambridge_Cambridgeshire_England.html" id="infoPageText4-6">a guided city walk</a>
+                    <span id="infoPageText4-3">, featuring art and antiquities. Punting is a popular Cambridge activity. There are various </span>
+                    <a href="https://www.tripadvisor.co.uk/Attraction_Products-g186225-zfg11865-a_contentId.38631605467+692981228-Cambridge_Cambridgeshire_England.html" id="infoPageText4-4">punting providers</a>
+                    <span id="infoPageText4-5">, including one right in front of Queens’ College. For those interested in city history, we recommend a </span>
+                    <a href="https://www.tripadvisor.co.uk/Attraction_Products-g186225-t12046-zfg11876-a_contentId.38383217257+692981228-Cambridge_Cambridgeshire_England.html" id="infoPageText4-6">guided dity walk</a>
                     <span id="infoPageText4-7">. Check </span>
                     <a href="https://www.cambridgetouristinformation.co.uk/" id="infoPageText4-8">Cambridge Tourist Information</a> 
                     <span id="infoPageText4-9"> for more recommendations.</span>
@@ -117,7 +123,7 @@
             </div>
             <div>
                 <h1 class="handwriting brown" id="infoPageText5">Restaurants</h1>
-                <p><span id="infoPageText5-1">Cambridge offers a wide range of dining options, from upscale fine dining to cozy independent restaurants. As steak lovers, we suggest Maison du Steak. If you're looking for a stunning view paired with a delicious brunch menu, consider dining at Six at the Varsity Hotel. Stick and Sushi was our last date night choice at Cambridge. And if you're interested in Chinese cuisine, Seven Days on Regent Street is renowned for being one of the late Stephen Hawking's favorites. Check </span>
+                <p><span id="infoPageText5-1">Cambridge offers a wide range of dining options, from upscale/fine dining to cozy, independent restaurants. As steak lovers, we suggest Maison du Steak on Hill Road. If you're looking for a stunning view paired with a delicious brunch menu, consider dining at Six at the Varsity Hotel. Stick and Sushi was our last date night choice at Cambridge. And if you're interested in Chinese cuisine, Seven Days on Regent Street is renowned for being one of the late Stephen Hawking's favorites. Check </span>
                     <a href="https://www.cambridgetouristinformation.co.uk/" id="infoPageText5-2">Cambridge Tourist Information</a>
                     <span id="infoPageText5-3"> for more recommendations.</span>
                 </p>
@@ -127,7 +133,7 @@
     </div>
 
     <div class="footer">
-        <p class="brown" style="font-size:smaller;" id="footerText1">with 💗 from London</p>
+        <p class="brown" style="font-size:smaller;" id="footerText1">with ♡ from London</p>
     </div>
     
 </div>
