--- a/menu.html
+++ b/menu.html
@@ -27,7 +27,7 @@
             <a href="./index.html" class="nav-item" id="navText1">Home</a>
             <a href="./schedule.html" class="nav-item" id="navText2">Schedule</a>
             <a href="#" class="nav-item current-page" id="navText3">Menu</a>
-            <a href="./guestinfo.html" class="nav-item" id="navText4">Guest Info</a>
+            <a href="./guestinfo.html" class="nav-item" id="navText4">Travel Guide</a>
             <a href="./contact.html" class="nav-item" id="navText5">Contact</a>
             <select class="nav-item" id="languageDropdown" >
                 <option value="en">🇬🇧 English</option>
@@ -36,9 +36,14 @@
             </select>
         </div>
         <div class="navbar2">
-            <button class="nav-toggle" aria-label="toggle navigation">
-                <span class="hamburger"></span>
-            </button>
+            <p class="brown"> ~ ♡ 囍 ♡ ~ </p>
+        </div>
+        <div class="navbar3">
+            <div>
+                <button class="nav-toggle" aria-label="toggle navigation">
+                    <span class="hamburger"></span>
+                </button>
+            </div>
         </div>
     </nav>
 </header>
@@ -47,43 +52,43 @@
     
     <div class="menu-container-main" style="margin-bottom: 0;">
         <div>
-            <p id="menuPageText1">We are delighted to offer a three-course menu for our wedding dinner, complemented with a vegetarian option. Please let us know your preferred choice. </p>
+            <p id="menuPageText1">We are delighted to offer a three-course menu for our wedding dinner, complemented with a vegetarian option. Please let us know your preferred choice.</p>
             <p id="menuPageText2">If you have any allergy or specific dietary requirements, please inform the couple in advance.</p>            
         </div>
         <div class="menu-container">
-            <div class="menu-container-small" style="margin-bottom: 2em;">
-                <p class="handwriting brown" style="margin-top:1em; margin-bottom: 1em; font-size:2em;" id="menuPageText3">Standard Menu</p>
+            <div class="menu-container-small" style="margin-bottom: 1em;">
+                <p class="handwriting brown" style="margin-top:0.5em; margin-bottom: 0.5em; font-size:2em;" id="menuPageText3">Standard Menu</p>
                 <div class="menu">
                     <p class="handwriting" id="menuPageText3-1">To starter</p>
                     <p id="menuPageText3-2">Confit Duck à l'Orange Rillette with Blood Orange Jelly, Grated Bitter Dark CHocolate and Watercress (Df/Gf)</p>
-                    <p class="cursive" id="menuPageText3-3">pair with xxx</p>
+                    <p class="italic" id="menuPageText3-3">pair with xxx</p>
                     <p class="handwriting" id="menuPageText3-4">Main</p>
                     <p id="menuPageText3-5">Seared Sea Bass Fillet with Saffron and Charred Red Pepper Risotto, Sugar Snap Peas, Braised Baby Leeks, Burnt Lemon, Beetroot Crisps and Saffron Cream Sauce</p>
-                    <p class="cursive" id="menuPageText3-6">pair with xxx</p>
+                    <p class="italic" id="menuPageText3-6">pair with xxx</p>
                     <p class="handwriting" id="menuPageText3-7">Dessert</p>
                     <p id="menuPageText3-8">Crème Brûlée with Bitter Chocolate Shortbread Spoon</p>
-                    <p class="cursive" id="menuPageText3-9">pair with xxx</p>
+                    <p class="italic" id="menuPageText3-9">pair with xxx</p>
                 </div>
             </div>
-            <div class="menu-container-small" style="margin-bottom: 2em;">
-                <p class="handwriting brown"  style="margin-top: 1em; margin-bottom: 1em; font-size:2em;" id="menuPageText4">Vegetarian Menu</p>
+            <div class="menu-container-small" style="margin-bottom: 1em;">
+                <p class="handwriting brown"  style="margin-top: 0.5em; margin-bottom: 0.5em; font-size:2em;" id="menuPageText4">Vegetarian Menu</p>
                 <div class="menu">
                     <p class="handwriting" id="menuPageText4-1">To starter</p>
                     <p id="menuPageText4-2">Chickpea and Courgette Falafel with Coconut Yoghurt, Mango Salsa, Chilli Siracha and Crispy Rocket (V/Ve/Gf)</p>
-                    <p class="cursive" id="menuPageText4-3">pair with xxx</p>
+                    <p class="italic" id="menuPageText4-3">pair with xxx</p>
                     <p class="handwriting" id="menuPageText4-4">Main</p>
                     <p id="menuPageText4-5">Wild Mushroom, Spinach and Brie Open Lasagne with Glazed Vine Cherry Tomatoes, Braised Shallot, Rocket, Parmesan and Balsamic Salac (V)</p>
-                    <p class="cursive" id="menuPageText4-6">pair with xxx</p>
+                    <p class="italic" id="menuPageText4-6">pair with xxx</p>
                     <p class="handwriting" id="menuPageText4-7">Dessert</p>
                     <p id="menuPageText4-8">Crème Brûlée with Bitter Chocolate Shortbread Spoon</p>
-                    <p class="cursive" id="menuPageText4-9">pair with xxx</p>
+                    <p class="italic" id="menuPageText4-9">pair with xxx</p>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="footer">
-        <p class="brown" style="font-size:smaller;" id="footerText1">with 💗 from London</p>
+        <p class="brown" style="font-size:smaller;" id="footerText1">with ♡ from London</p>
     </div>
 </div>
 
