--- a/contact.html
+++ b/contact.html
@@ -60,18 +60,12 @@
                 <p>Silver St</p>
                 <p>CB3 9ET</p>
                 <p>Cambridge</p> 
+                <p>United Kingdom</p> 
             </div>
-            <div class="venue-info">
-                <h2 class="handwriting" id="contactPageText2">Venue Contact:</h2>
-                <div>
-                    <p>+44 (0) 1223 335511</p>
-                    <p id="contactPageText2-1">(Porter's Lodge)</p>
-                </div>
+            <div class="social-container">
+                <h2 class="handwriting" id="contactPageText3">Social Media:</h2>
+                <p id="contactPageText3-1">We plan to set up a WhatsApp group and a wechat group. Please come back to this page for QR code prior to the wedding date.</p>
             </div>
-        </div>
-        <div class="social-container">
-            <h2 class="handwriting" id="contactPageText3">Social Media:</h2>
-            <p id="contactPageText3-1">We plan to set up a WhatsApp group and a wechat group. Please come back to this page for QR code prior to the wedding date.</p>
         </div>
     </div>
 
@@ -79,7 +73,6 @@
         <p class="brown" style="font-size:smaller;" id="footerText1">with ♡ from London</p>
     </div>
 
-</div>
 
 
 <script type="module" src="./index.js"></script>
