--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <a href="./index.html" class="nav-item" id="navText1">Home</a>
             <a href="./schedule.html" class="nav-item" id="navText2">Schedule</a>
             <a href="./menu.html" class="nav-item" id="navText3">Menu</a>
-            <a href="./guestinfo.html" class="nav-item" id="navText4">Travel Guide</a>
+            <a href="./travel-guide.html" class="nav-item" id="navText4">Travel Guide</a>
             <a href="#" class="nav-item  current-page" id="navText5">Contact</a>
             <select class="nav-item" id="languageDropdown" >
                 <option value="en">🇬🇧 English</option>
@@ -56,7 +56,7 @@
         <div class="venue-container">
             <div class="venue-info">
                 <h2 class="handwriting" id="contactPageText1">Venue Address:</h2>
-                <p>Queens College</p>
+                <p>Queens' College</p>
                 <p>Silver St</p>
                 <p>CB3 9ET</p>
                 <p>Cambridge</p> 
