--- a/schedule.html
+++ b/schedule.html
@@ -27,7 +27,7 @@
                 <a href="./index.html" class="nav-item" id="navText1">Home</a>
                 <a href="#" class="nav-item current-page" id="navText2">Schedule</a>
                 <a href="./menu.html" class="nav-item" id="navText3">Menu</a>
-                <a href="./guestinfo.html" class="nav-item" id="navText4">Travel Guide</a>
+                <a href="./travel-guide.html" class="nav-item" id="navText4">Travel Guide</a>
                 <a href="./contact.html" class="nav-item" id="navText5">Contact</a>
                 <select class="nav-item" id="languageDropdown" >
                     <option value="en">🇬🇧 English</option>
